# thermostat

./: .gitignore  Cargo.toml  README.md  add-git-info.patch  build.rs  flake.nix  memory.x
doc/: PID tuning.md
documentation/: Hardware setup.md  PID tuning.md
pytec/: aioexample.py  autotune.py  example.py  plot.py  pyproject.toml  setup.py  tecQT.py  tec_qt.py  tec_qt.ui  ui_tec_qt.py  waitingspinnerwidget.py
pytec/pytec/: aioclient.py  client.py
pythermostat/pythermostat/: autotune.py  control_panel.py  plot.py
pythermostat/pythermostat/gui/model/: thermostat.py
pythermostat/pythermostat/gui/view/: MainWindow.ui  ctrl_panel.py  file_dialogue.py  info_box.py  menus.py  param_tree.json  settings_tree.py
src/: built.rs  channel_state.rs  channels.rs  command_handler.rs  command_parser.rs  config.rs  dfu.rs  fan_ctrl.rs  firmware.rs  flash_store.rs  hw_rev.rs  main.rs  pid.rs  pins.rs  pwm_limits.rs  softspi.rs
